--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.9.3",
     "raw-loader": "^0.5.1",
+    "reload-html-webpack-plugin": "^0.1.2",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
