--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.1",
+    "angular-material-icons": "^0.7.1",
     "angular-ui-router": "^1.0.0-beta.2",
     "jquery": "^3.1.0"
   },
